# XAC_Lottery

./: CMakeLists.txt  Candidate.cpp  Candidate.h  LICENSE  Logging.cpp  Logging.h  README.md  main.cpp
